--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "tsconfig-paths": "4.0.0",
     "typescript": "^4.3.5"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
@@ -82,3 +85,4 @@
     "testEnvironment": "node"
   }
 }
+
